Start food related endpoints
